--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.11.0",
+    "axios": "^1.8.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
