--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.11.0",
     "axios": "^1.8.4",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
